welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: not found: value versLAvant
versLAvant = true
^Program:6: error: not found: value versLAvant
	if (versLAvant==true)
            ^